--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -26,8 +26,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-mustache</artifactId>
+		<groupId>pl.allegro.tech.boot</groupId>
+		<artifactId>handlebars-spring-boot-starter</artifactId>
+		<version>0.2.15</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
